
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; } ;
typedef int fd_set ;
typedef int buf ;


 int BS ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int SHELL_PORT ;
 int STDIN_FILENO ;
 int conn (struct sockaddr_in*) ;
 int die (char*) ;
 int htons (int ) ;
 int printf (char*) ;
 int read (int,char*,int) ;
 int select (int,int *,int *,int *,int *) ;
 int write (int,char*,int) ;

void shell(struct sockaddr_in *sap)
{
    int sock = 0, l = 0;
    char buf[BS];
    fd_set rfds;

    sap->sin_port = htons(SHELL_PORT);
    sock = conn(sap);

    printf("got a shell\n\n");
    FD_ZERO(&rfds);

    while (1) {
     FD_SET(STDIN_FILENO, &rfds);
     FD_SET(sock, &rfds);

     if (select(sock + 1, &rfds, ((void*)0), ((void*)0), ((void*)0)) < 1)
         die("select");

     if (FD_ISSET(STDIN_FILENO, &rfds)) {
         if ((l = read(0, buf, BS)) <= 0)
          die("\n - Connection closed by user\n");
         if (write(sock, buf, l) < 1)
          die("write");
     }

     if (FD_ISSET(sock, &rfds)) {
         l = read(sock, buf, sizeof(buf));

         if (l == 0)
          die("\n - Connection terminated.\n");
         else if (l < 0)
          die("\n - Read failure\n");

         if (write(1, buf, l) < 1)
          die("write");
     }
    }
}
